// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardDisplay should render correctly with props 1`] = `
<div
  className="card category-card text-center col-sm-4 position-relative"
>
  <div
    className="card-body d-flex flex-column"
  >
    <div
      className="d-flex justify-content-center align-items-center mb-2"
    >
      <h5
        className="card-title mb-0 mr-3"
      >
        product title
      </h5>
      <img
        aria-hidden="true"
        src="http://localhost/svg/pcat-1.svg"
      />
    </div>
    <p
      className="card-text"
    >
      this is some description
    </p>
    <Link
      className="btn bg-info text-white w-45 ml-auto mt-auto mr-auto"
      replace={false}
      to="products/pcat-1"
    >
      Browse
    </Link>
  </div>
</div>
`;

exports[`CardDisplay should render correctly without props 1`] = `
<div
  className="card category-card text-center col-sm-4 position-relative"
>
  <div
    className="card-body d-flex flex-column"
  >
    <div
      className="d-flex justify-content-center align-items-center mb-2"
    >
      <h5
        className="card-title mb-0 mr-3"
      />
      <img
        aria-hidden="true"
        src="http://localhost/svg/undefined.svg"
      />
    </div>
    <p
      className="card-text"
    />
    <Link
      className="btn bg-info text-white w-45 ml-auto mt-auto mr-auto"
      replace={false}
      to="products/undefined"
    >
      Browse
    </Link>
  </div>
</div>
`;
